--- a/notebooks/load_generator.ipynb
+++ b/notebooks/load_generator.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,62 +230,309 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>bin</th>\n",
-       "      <th>name</th>\n",
-       "      <th>freq</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ind</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1 - 2</td>\n",
-       "      <td>6</td>\n",
+       "      <th>prior110</th>\n",
+       "      <td>13.962170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2 - 3</td>\n",
-       "      <td>24</td>\n",
+       "      <th>prior113</th>\n",
+       "      <td>10.861125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3 - 4</td>\n",
-       "      <td>20</td>\n",
+       "      <th>prior118</th>\n",
+       "      <td>21.304131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4 - 5</td>\n",
-       "      <td>42</td>\n",
+       "      <th>prior141</th>\n",
+       "      <td>11.309109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5 - 6</td>\n",
-       "      <td>20</td>\n",
+       "      <th>prior144</th>\n",
+       "      <td>11.363863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior16</th>\n",
+       "      <td>14.479841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior217</th>\n",
+       "      <td>10.403186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior223</th>\n",
+       "      <td>14.201095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior245</th>\n",
+       "      <td>7.974116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior29</th>\n",
+       "      <td>17.401692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior352</th>\n",
+       "      <td>9.860627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior360</th>\n",
+       "      <td>12.339472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior370</th>\n",
+       "      <td>16.207068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior438</th>\n",
+       "      <td>16.381284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior55</th>\n",
+       "      <td>20.587357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior59</th>\n",
+       "      <td>10.452962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior60</th>\n",
+       "      <td>15.828771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior68</th>\n",
+       "      <td>16.769537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior74</th>\n",
+       "      <td>16.918865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prior88</th>\n",
+       "      <td>9.805874</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  bin   name  freq\n",
-       "0   1  1 - 2     6\n",
-       "1   2  2 - 3    24\n",
-       "2   3  3 - 4    20\n",
-       "3   4  4 - 5    42\n",
-       "4   5  5 - 6    20"
+       "                val\n",
+       "ind                \n",
+       "prior110  13.962170\n",
+       "prior113  10.861125\n",
+       "prior118  21.304131\n",
+       "prior141  11.309109\n",
+       "prior144  11.363863\n",
+       "prior16   14.479841\n",
+       "prior217  10.403186\n",
+       "prior223  14.201095\n",
+       "prior245   7.974116\n",
+       "prior29   17.401692\n",
+       "prior352   9.860627\n",
+       "prior360  12.339472\n",
+       "prior370  16.207068\n",
+       "prior438  16.381284\n",
+       "prior55   20.587357\n",
+       "prior59   10.452962\n",
+       "prior60   15.828771\n",
+       "prior68   16.769537\n",
+       "prior74   16.918865\n",
+       "prior88    9.805874"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(raw_data)"
+    "import pandas as pd\n",
+    "\n",
+    "data = {'ind': ['prior110', 'prior113', 'prior118', 'prior141', 'prior144', 'prior16', 'prior217', 'prior223', 'prior245', 'prior29', 'prior352', 'prior360', 'prior370', 'prior438', 'prior55', 'prior59', 'prior60', 'prior68', 'prior74', 'prior88'],\n",
+    "        'val': [13.96217, 10.861125, 21.304131, 11.309109, 11.363863, 14.479841, 10.403186, 14.201095, 7.974116, 17.401692, 9.860627, 12.339472, 16.207068, 16.381284, 20.587357, 10.452962, 15.828771, 16.769537, 16.918865, 9.805874]}\n",
+    "\n",
+    "prior_fails = pd.DataFrame(data, columns=['ind', 'val'])\n",
+    "\n",
+    "prior_fails.set_index('ind', inplace=True)\n",
+    "\n",
+    "prior_fails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count, division = np.histogram(prior_fails['val'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 3, 1, 3, 1, 4, 1, 0, 2])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def hist_payload_generate(s, step = 50):\n",
+    "    bin_range = np.arange(-200, 1000+step, step)\n",
+    "    out, bins  = pd.cut(s, bins=bin_range, include_lowest=True, right=False, retbins=True)\n",
+    "    df = out.value_counts().to_frame().reset_index().rename(columns= {'index':'name', 0:'freq'})\n",
+    "    x_col = []\n",
+    "    for x in df['name']:\n",
+    "        x_col.append(x.mid)\n",
+    "    df['name'] = df['name'].astype(str)\n",
+    "    df['name'] = df['name'].str.replace('\\[', '',regex = True)\n",
+    "    df['name'] = df['name'].str.replace('\\)', '',regex = True)\n",
+    "    df['name'] = df['name'].str.replace('\\,', ' -',regex = True)\n",
+    "    df['value'] = x_col\n",
+    "    df = df.rename(columns = {\"name\":\"label\"})\n",
+    "    return df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series([0.0,950.0,-70.0,812.0,0.0,-90.0,0.0,0.0,-90.0,0.0,-64.0,208.0,0.0,-90.0,0.0,-80.0,0.0,0.0,-80.0,-48.0,840.0,-100.0,190.0,130.0,-100.0,-100.0,0.0,-50.0,0.0,-100.0,-100.0,0.0,-90.0,0.0,-90.0,-90.0,63.0,-90.0,0.0,0.0,-90.0,-80.0,0.0,])\n",
+    "\n",
+    "df = _get_hist(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': '-100 - -50', 'freq': 18, 'value': -75.0},\n",
+       " {'label': '0 - 50', 'freq': 16, 'value': 25.0},\n",
+       " {'label': '-50 - 0', 'freq': 2, 'value': -25.0},\n",
+       " {'label': '800 - 850', 'freq': 2, 'value': 825.0},\n",
+       " {'label': '950 - 1000', 'freq': 1, 'value': 975.0},\n",
+       " {'label': '50 - 100', 'freq': 1, 'value': 75.0},\n",
+       " {'label': '100 - 150', 'freq': 1, 'value': 125.0},\n",
+       " {'label': '150 - 200', 'freq': 1, 'value': 175.0},\n",
+       " {'label': '200 - 250', 'freq': 1, 'value': 225.0},\n",
+       " {'label': '600 - 650', 'freq': 0, 'value': 625.0},\n",
+       " {'label': '900 - 950', 'freq': 0, 'value': 925.0},\n",
+       " {'label': '850 - 900', 'freq': 0, 'value': 875.0},\n",
+       " {'label': '750 - 800', 'freq': 0, 'value': 775.0},\n",
+       " {'label': '700 - 750', 'freq': 0, 'value': 725.0},\n",
+       " {'label': '650 - 700', 'freq': 0, 'value': 675.0},\n",
+       " {'label': '-200 - -150', 'freq': 0, 'value': -175.0},\n",
+       " {'label': '550 - 600', 'freq': 0, 'value': 575.0},\n",
+       " {'label': '500 - 550', 'freq': 0, 'value': 525.0},\n",
+       " {'label': '450 - 500', 'freq': 0, 'value': 475.0},\n",
+       " {'label': '-150 - -100', 'freq': 0, 'value': -125.0},\n",
+       " {'label': '350 - 400', 'freq': 0, 'value': 375.0},\n",
+       " {'label': '300 - 350', 'freq': 0, 'value': 325.0},\n",
+       " {'label': '250 - 300', 'freq': 0, 'value': 275.0},\n",
+       " {'label': '400 - 450', 'freq': 0, 'value': 425.0}]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0.0\n",
+       "1     950.0\n",
+       "2     -70.0\n",
+       "3     812.0\n",
+       "4       0.0\n",
+       "5     -90.0\n",
+       "6       0.0\n",
+       "7       0.0\n",
+       "8     -90.0\n",
+       "9       0.0\n",
+       "10    -64.0\n",
+       "11    208.0\n",
+       "12      0.0\n",
+       "13    -90.0\n",
+       "14      0.0\n",
+       "15    -80.0\n",
+       "16      0.0\n",
+       "17      0.0\n",
+       "18    -80.0\n",
+       "19    -48.0\n",
+       "20    840.0\n",
+       "21   -100.0\n",
+       "22    190.0\n",
+       "23    130.0\n",
+       "24   -100.0\n",
+       "25   -100.0\n",
+       "26      0.0\n",
+       "27    -50.0\n",
+       "28      0.0\n",
+       "29   -100.0\n",
+       "30   -100.0\n",
+       "31      0.0\n",
+       "32    -90.0\n",
+       "33      0.0\n",
+       "34    -90.0\n",
+       "35    -90.0\n",
+       "36     63.0\n",
+       "37    -90.0\n",
+       "38      0.0\n",
+       "39      0.0\n",
+       "40    -90.0\n",
+       "41    -80.0\n",
+       "42      0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
    ]
   },
   {
