adding scatter plot.

--- a/notebooks/load_generator.ipynb
+++ b/notebooks/load_generator.ipynb
@@ -431,45 +431,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': '-100 - -50', 'freq': 18, 'value': -75.0},\n",
-       " {'label': '0 - 50', 'freq': 16, 'value': 25.0},\n",
-       " {'label': '-50 - 0', 'freq': 2, 'value': -25.0},\n",
-       " {'label': '800 - 850', 'freq': 2, 'value': 825.0},\n",
-       " {'label': '950 - 1000', 'freq': 1, 'value': 975.0},\n",
-       " {'label': '50 - 100', 'freq': 1, 'value': 75.0},\n",
-       " {'label': '100 - 150', 'freq': 1, 'value': 125.0},\n",
-       " {'label': '150 - 200', 'freq': 1, 'value': 175.0},\n",
-       " {'label': '200 - 250', 'freq': 1, 'value': 225.0},\n",
-       " {'label': '600 - 650', 'freq': 0, 'value': 625.0},\n",
-       " {'label': '900 - 950', 'freq': 0, 'value': 925.0},\n",
-       " {'label': '850 - 900', 'freq': 0, 'value': 875.0},\n",
-       " {'label': '750 - 800', 'freq': 0, 'value': 775.0},\n",
-       " {'label': '700 - 750', 'freq': 0, 'value': 725.0},\n",
-       " {'label': '650 - 700', 'freq': 0, 'value': 675.0},\n",
-       " {'label': '-200 - -150', 'freq': 0, 'value': -175.0},\n",
-       " {'label': '550 - 600', 'freq': 0, 'value': 575.0},\n",
-       " {'label': '500 - 550', 'freq': 0, 'value': 525.0},\n",
-       " {'label': '450 - 500', 'freq': 0, 'value': 475.0},\n",
-       " {'label': '-150 - -100', 'freq': 0, 'value': -125.0},\n",
-       " {'label': '350 - 400', 'freq': 0, 'value': 375.0},\n",
-       " {'label': '300 - 350', 'freq': 0, 'value': 325.0},\n",
-       " {'label': '250 - 300', 'freq': 0, 'value': 275.0},\n",
-       " {'label': '400 - 450', 'freq': 0, 'value': 425.0}]"
+       "[{'x': 0.0, 'y': 0.0},\n",
+       " {'x': 0.2, 'y': 0.01},\n",
+       " {'x': 0.41, 'y': 0.06},\n",
+       " {'x': 0.61, 'y': 0.12},\n",
+       " {'x': 0.82, 'y': 0.22},\n",
+       " {'x': 1.02, 'y': 0.35},\n",
+       " {'x': 1.22, 'y': 0.5},\n",
+       " {'x': 1.43, 'y': 0.68},\n",
+       " {'x': 1.63, 'y': 0.89},\n",
+       " {'x': 1.84, 'y': 1.12},\n",
+       " {'x': 2.04, 'y': 1.39},\n",
+       " {'x': 2.24, 'y': 1.68},\n",
+       " {'x': 2.45, 'y': 2.0},\n",
+       " {'x': 2.65, 'y': 2.35},\n",
+       " {'x': 2.86, 'y': 2.72},\n",
+       " {'x': 3.06, 'y': 3.12},\n",
+       " {'x': 3.27, 'y': 3.55},\n",
+       " {'x': 3.47, 'y': 4.01},\n",
+       " {'x': 3.67, 'y': 4.5},\n",
+       " {'x': 3.88, 'y': 5.01},\n",
+       " {'x': 4.08, 'y': 5.55},\n",
+       " {'x': 4.29, 'y': 6.12},\n",
+       " {'x': 4.49, 'y': 6.72},\n",
+       " {'x': 4.69, 'y': 7.34},\n",
+       " {'x': 4.9, 'y': 8.0},\n",
+       " {'x': 5.1, 'y': 8.68},\n",
+       " {'x': 5.31, 'y': 9.38},\n",
+       " {'x': 5.51, 'y': 10.12},\n",
+       " {'x': 5.71, 'y': 10.88},\n",
+       " {'x': 5.92, 'y': 11.68},\n",
+       " {'x': 6.12, 'y': 12.49},\n",
+       " {'x': 6.33, 'y': 13.34},\n",
+       " {'x': 6.53, 'y': 14.22},\n",
+       " {'x': 6.73, 'y': 15.12},\n",
+       " {'x': 6.94, 'y': 16.05},\n",
+       " {'x': 7.14, 'y': 17.01},\n",
+       " {'x': 7.35, 'y': 17.99},\n",
+       " {'x': 7.55, 'y': 19.01},\n",
+       " {'x': 7.76, 'y': 20.05},\n",
+       " {'x': 7.96, 'y': 21.12},\n",
+       " {'x': 8.16, 'y': 22.21},\n",
+       " {'x': 8.37, 'y': 23.34},\n",
+       " {'x': 8.57, 'y': 24.49},\n",
+       " {'x': 8.78, 'y': 25.67},\n",
+       " {'x': 8.98, 'y': 26.88},\n",
+       " {'x': 9.18, 'y': 28.11},\n",
+       " {'x': 9.39, 'y': 29.38},\n",
+       " {'x': 9.59, 'y': 30.67},\n",
+       " {'x': 9.8, 'y': 31.99},\n",
+       " {'x': 10.0, 'y': 33.33}]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def _scatter_payload_generator():\n",
+    "    x = np.linspace(0,10)\n",
+    "    y = np.random.uniform(0, 100, x.size)\n",
+    "    df = pd.DataFrame({\"x\": x,\"y\":   y }).round(2).to_dict(\"records\")\n",
+    "    colors_df = pd.DataFrame({\"x\":col_gen(),\"y\":col_gen()}).to_dict(\"records\")\n",
+    "    return {\n",
+    "        \"data\": df.to_dict(\"records\"),\n",
+    "        \"fill\": colors_df.to_dict(\"records\"),\n",
+    "        \"value_type\": \"abs\",\n",
+    "        \"chart_type\": \"scatter\",\n",
+    "    }"
    ]
   },
   {
