--- a/notebooks/load_generator.ipynb
+++ b/notebooks/load_generator.ipynb
@@ -579,7 +579,213 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[\n",
+    "  {\n",
+    "    name: \"01/2020\",\n",
+    "    uv: 2400, // uv is the part of the graph we want to show\n",
+    "    pv: 0 // pv is the floating part (transparent)\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"02/2020\",\n",
+    "    uv: -400,\n",
+    "    pv: 2400 // to get this pv, we use 01/2020's uv + pv\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"03/2020\",\n",
+    "    uv: -400,\n",
+    "    pv: 2000 // use 02/2020's uv + pv, and so forth\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"04/2020\",\n",
+    "    uv: 800,\n",
+    "    pv: 1600\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"05/2020\",\n",
+    "    uv: 900,\n",
+    "    pv: 2400\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"06/2020\",\n",
+    "    uv: -500,\n",
+    "    pv: 3300\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"07/2020\",\n",
+    "    uv: 900,\n",
+    "    pv: 2800\n",
+    "  },\n",
+    "  {\n",
+    "    name: \"Total\",\n",
+    "    uv: 3700,\n",
+    "    pv: 0\n",
+    "  }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_dates(start = pd.to_datetime('2015-01-01'), end = pd.to_datetime('2018-01-01'), unit='D', seed=None):\n",
+    "    n = random.randint(4,12)\n",
+    "    if not seed:  # from piR's answer\n",
+    "        np.random.seed(0)\n",
+    "    ndays = (end - start).days + 1\n",
+    "    return pd.to_timedelta(np.random.rand(n) * ndays, unit=unit) + start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "dates_list = pd.Series(random_dates().sort_values()).dt.to_period('M').drop_duplicates().astype(str).tolist()\n",
+    "old_list = [{\"uv\": float(np.random.uniform(2700, 4500, 1)), \"pv\": 0}]\n",
+    "for index in range(1, len(dates_list)):\n",
+    "    old_list.append({\"uv\":old_list[index-1][\"uv\"] + old_list[index-1][\"pv\"],\"pv\":float(np.random.uniform(-500,500,1))})\n",
+    "old_list[len(dates_list)-1]['pv'] = 0\n",
+    "df = pd.DataFrame(old_list)\n",
+    "df['date'] = dates_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uv</th>\n",
+       "      <th>pv</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3652.010856</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2016-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3652.010856</td>\n",
+       "      <td>68.044561</td>\n",
+       "      <td>2016-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3720.055417</td>\n",
+       "      <td>425.596638</td>\n",
+       "      <td>2016-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4145.652055</td>\n",
+       "      <td>-428.963942</td>\n",
+       "      <td>2016-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3716.688113</td>\n",
+       "      <td>-412.870700</td>\n",
+       "      <td>2016-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3303.817413</td>\n",
+       "      <td>-479.781603</td>\n",
+       "      <td>2017-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2824.035810</td>\n",
+       "      <td>332.619846</td>\n",
+       "      <td>2017-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3156.655656</td>\n",
+       "      <td>278.156751</td>\n",
+       "      <td>2017-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3434.812407</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2017-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            uv          pv     date\n",
+       "0  3652.010856    0.000000  2016-02\n",
+       "1  3652.010856   68.044561  2016-04\n",
+       "2  3720.055417  425.596638  2016-08\n",
+       "3  4145.652055 -428.963942  2016-10\n",
+       "4  3716.688113 -412.870700  2016-12\n",
+       "5  3303.817413 -479.781603  2017-02\n",
+       "6  2824.035810  332.619846  2017-05\n",
+       "7  3156.655656  278.156751  2017-09\n",
+       "8  3434.812407    0.000000  2017-11"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/4_ThreeNum.csv\""
+   ]
   }
  ],
  "metadata": {
