adding stacked area chart.

--- a/notebooks/load_generator.ipynb
+++ b/notebooks/load_generator.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': [{'pct_X': 0.87, 'pct_Y': 0.13}],\n",
-       " 'fill': [{'label': 'pct_X', 'fill': '#693683'},\n",
-       "  {'label': 'pct_Y', 'fill': '#7b8afe'}],\n",
+       "{'data': [{'pct_X': 0.68, 'pct_Y': 0.32},\n",
+       "  {'pct_X': 0.21, 'pct_Y': 0.79},\n",
+       "  {'pct_X': 0.21, 'pct_Y': 0.79},\n",
+       "  {'pct_X': 0.37, 'pct_Y': 0.63},\n",
+       "  {'pct_X': 0.12, 'pct_Y': 0.88},\n",
+       "  {'pct_X': 0.2, 'pct_Y': 0.8}],\n",
+       " 'fill': [{'label': 'pct_X', 'fill': '#8af454'},\n",
+       "  {'label': 'pct_Y', 'fill': '#459a9d'}],\n",
        " 'value_type': 'pct',\n",
        " 'chart_type': 'bar'}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1515,74 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "[\n",
+    "        {name:'A', x:12, y:23,  z:122},\n",
+    "        {name:'B', x:22, y:3,   z:73},\n",
+    "        {name:'C', x:13, y:15,  z:32},\n",
+    "        {name:'D', x:42, y:35,  z:23},\n",
+    "        {name:'E', x:51, y:45,  z:20},\n",
+    "        {name:'F', x:16, y:25,  z:29},\n",
+    "        {name:'G', x:17, y:17,  z:61},\n",
+    "        {name:'H', x:81, y:32,  z:45},\n",
+    "        {name:'I', x:19, y:43,  z:93},\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _stackedarea_payload_generator(type = \"abs\"):\n",
+    "    # type = \"abs\"\n",
+    "    label_len = random.randint(1, 10)\n",
+    "    x_max = random.randint(1, 100)\n",
+    "    y_max = random.randint(1, 100)\n",
+    "    z_max = random.randint(1, 100)\n",
+    "    df = pd.DataFrame({\"label\":[names.get_full_name() for _ in range(label_len)], \"X\":np.random.uniform(0, x_max, label_len), \"Y\":np.random.uniform(0, y_max, label_len), \"Z\":np.random.uniform(0, z_max, label_len)})\n",
+    "    colors = [col_gen() for _ in range(df.shape[1] - 1)]\n",
+    "    df_cols = df.columns.tolist()\n",
+    "    df_cols.remove('label')\n",
+    "    df = df.round(2)\n",
+    "    colors_df = pd.DataFrame({\"label\": df_cols, \"fill\":colors})\n",
+    "    return {\"data\":df[['X', 'Y','Z']].to_dict('records'), \"fill\":colors_df.to_dict('records'),\"value_type\":type,\"chart_type\":\"stackedarea\"}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'X': 31.02, 'Y': 23.72, 'Z': 37.56},\n",
+       "  {'X': 38.65, 'Y': 2.05, 'Z': 3.88},\n",
+       "  {'X': 1.28, 'Y': 22.67, 'Z': 7.94},\n",
+       "  {'X': 42.0, 'Y': 22.8, 'Z': 6.13},\n",
+       "  {'X': 41.62, 'Y': 7.15, 'Z': 24.82},\n",
+       "  {'X': 41.95, 'Y': 4.38, 'Z': 9.63},\n",
+       "  {'X': 64.17, 'Y': 10.72, 'Z': 17.72},\n",
+       "  {'X': 46.36, 'Y': 12.37, 'Z': 9.29},\n",
+       "  {'X': 24.45, 'Y': 19.39, 'Z': 6.04},\n",
+       "  {'X': 29.72, 'Y': 14.91, 'Z': 4.19}],\n",
+       " 'fill': [{'label': 'X', 'fill': '#861ef1'},\n",
+       "  {'label': 'Y', 'fill': '#7f6926'},\n",
+       "  {'label': 'Z', 'fill': '#15900c'}],\n",
+       " 'value_type': 'abs',\n",
+       " 'chart_type': 'stackedarea'}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_stackedarea_payload_generator()"
+   ]
   },
   {
    "cell_type": "code",
