--- a/notebooks/load_generator.ipynb
+++ b/notebooks/load_generator.ipynb
@@ -1586,6 +1586,281 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>children</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'name': 'boss1', 'children': [{'name': 'miste...</td>\n",
+       "      <td>CEO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'name': 'boss2', 'children': [{'name': 'miste...</td>\n",
+       "      <td>CEO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            children name\n",
+       "0  {'name': 'boss1', 'children': [{'name': 'miste...  CEO\n",
+       "1  {'name': 'boss2', 'children': [{'name': 'miste...  CEO"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_json(\"https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_dendrogram.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _correlogram_payload_generator():\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_correlogram.csv\")\n",
+    "    df = df.set_index('Unnamed: 0')\n",
+    "    df.index.name = None\n",
+    "    df_dict = df.to_dict('split')\n",
+    "    data_collector = []\n",
+    "    for x in df_dict['index']:\n",
+    "        for y in df_dict['columns']:\n",
+    "            data_collector.append({\"x\":x,\"y\":y,\"value\":float(df.loc[x,y])})\n",
+    "    return data_collector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mpg', 'cyl', 'disp', 'hp', 'drat', 'wt', 'qsec', 'vs', 'am', 'gear', 'carb']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mpg', 'cyl', 'disp', 'hp', 'drat', 'wt', 'qsec', 'vs', 'am', 'gear', 'carb']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dict['columns']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'x': 'mpg', 'y': 'mpg', 'value': 1.0},\n",
+       " {'x': 'mpg', 'y': 'cyl', 'value': -0.852161959426613},\n",
+       " {'x': 'mpg', 'y': 'disp', 'value': -0.847551379262479},\n",
+       " {'x': 'mpg', 'y': 'hp', 'value': -0.776168371826586},\n",
+       " {'x': 'mpg', 'y': 'drat', 'value': 0.681171907806749},\n",
+       " {'x': 'mpg', 'y': 'wt', 'value': -0.867659376517228},\n",
+       " {'x': 'mpg', 'y': 'qsec', 'value': 0.418684033921778},\n",
+       " {'x': 'mpg', 'y': 'vs', 'value': 0.664038919127593},\n",
+       " {'x': 'mpg', 'y': 'am', 'value': 0.599832429454648},\n",
+       " {'x': 'mpg', 'y': 'gear', 'value': 0.480284757338842},\n",
+       " {'x': 'mpg', 'y': 'carb', 'value': -0.550925073902459},\n",
+       " {'x': 'cyl', 'y': 'mpg', 'value': -0.852161959426613},\n",
+       " {'x': 'cyl', 'y': 'cyl', 'value': 1.0},\n",
+       " {'x': 'cyl', 'y': 'disp', 'value': 0.902032872146999},\n",
+       " {'x': 'cyl', 'y': 'hp', 'value': 0.83244745272182},\n",
+       " {'x': 'cyl', 'y': 'drat', 'value': -0.69993811382877},\n",
+       " {'x': 'cyl', 'y': 'wt', 'value': 0.782495794463241},\n",
+       " {'x': 'cyl', 'y': 'qsec', 'value': -0.591242073768869},\n",
+       " {'x': 'cyl', 'y': 'vs', 'value': -0.810811796083005},\n",
+       " {'x': 'cyl', 'y': 'am', 'value': -0.522607046900675},\n",
+       " {'x': 'cyl', 'y': 'gear', 'value': -0.492686599389471},\n",
+       " {'x': 'cyl', 'y': 'carb', 'value': 0.526988293749643},\n",
+       " {'x': 'disp', 'y': 'mpg', 'value': -0.847551379262479},\n",
+       " {'x': 'disp', 'y': 'cyl', 'value': 0.902032872146999},\n",
+       " {'x': 'disp', 'y': 'disp', 'value': 1.0},\n",
+       " {'x': 'disp', 'y': 'hp', 'value': 0.790948586369806},\n",
+       " {'x': 'disp', 'y': 'drat', 'value': -0.71021392716927},\n",
+       " {'x': 'disp', 'y': 'wt', 'value': 0.887979922058138},\n",
+       " {'x': 'disp', 'y': 'qsec', 'value': -0.433697880811014},\n",
+       " {'x': 'disp', 'y': 'vs', 'value': -0.7104158907906},\n",
+       " {'x': 'disp', 'y': 'am', 'value': -0.591227040063948},\n",
+       " {'x': 'disp', 'y': 'gear', 'value': -0.555569198562483},\n",
+       " {'x': 'disp', 'y': 'carb', 'value': 0.394976864868969},\n",
+       " {'x': 'hp', 'y': 'mpg', 'value': -0.776168371826586},\n",
+       " {'x': 'hp', 'y': 'cyl', 'value': 0.83244745272182},\n",
+       " {'x': 'hp', 'y': 'disp', 'value': 0.790948586369806},\n",
+       " {'x': 'hp', 'y': 'hp', 'value': 1.0},\n",
+       " {'x': 'hp', 'y': 'drat', 'value': -0.44875911687292},\n",
+       " {'x': 'hp', 'y': 'wt', 'value': 0.658747887344759},\n",
+       " {'x': 'hp', 'y': 'qsec', 'value': -0.708223388861953},\n",
+       " {'x': 'hp', 'y': 'vs', 'value': -0.72309673735245},\n",
+       " {'x': 'hp', 'y': 'am', 'value': -0.243204257185851},\n",
+       " {'x': 'hp', 'y': 'gear', 'value': -0.125704258225474},\n",
+       " {'x': 'hp', 'y': 'carb', 'value': 0.74981247154911},\n",
+       " {'x': 'drat', 'y': 'mpg', 'value': 0.681171907806749},\n",
+       " {'x': 'drat', 'y': 'cyl', 'value': -0.69993811382877},\n",
+       " {'x': 'drat', 'y': 'disp', 'value': -0.71021392716927},\n",
+       " {'x': 'drat', 'y': 'hp', 'value': -0.44875911687292},\n",
+       " {'x': 'drat', 'y': 'drat', 'value': 1.0},\n",
+       " {'x': 'drat', 'y': 'wt', 'value': -0.712440646697372},\n",
+       " {'x': 'drat', 'y': 'qsec', 'value': 0.091204759651183},\n",
+       " {'x': 'drat', 'y': 'vs', 'value': 0.440278464955349},\n",
+       " {'x': 'drat', 'y': 'am', 'value': 0.71271112722627},\n",
+       " {'x': 'drat', 'y': 'gear', 'value': 0.699610131934665},\n",
+       " {'x': 'drat', 'y': 'carb', 'value': -0.0907897988688673},\n",
+       " {'x': 'wt', 'y': 'mpg', 'value': -0.867659376517228},\n",
+       " {'x': 'wt', 'y': 'cyl', 'value': 0.782495794463241},\n",
+       " {'x': 'wt', 'y': 'disp', 'value': 0.887979922058138},\n",
+       " {'x': 'wt', 'y': 'hp', 'value': 0.658747887344759},\n",
+       " {'x': 'wt', 'y': 'drat', 'value': -0.712440646697372},\n",
+       " {'x': 'wt', 'y': 'wt', 'value': 1.0},\n",
+       " {'x': 'wt', 'y': 'qsec', 'value': -0.174715878713405},\n",
+       " {'x': 'wt', 'y': 'vs', 'value': -0.554915677663994},\n",
+       " {'x': 'wt', 'y': 'am', 'value': -0.692495258839484},\n",
+       " {'x': 'wt', 'y': 'gear', 'value': -0.583286996536648},\n",
+       " {'x': 'wt', 'y': 'carb', 'value': 0.427605937735487},\n",
+       " {'x': 'qsec', 'y': 'mpg', 'value': 0.418684033921778},\n",
+       " {'x': 'qsec', 'y': 'cyl', 'value': -0.591242073768869},\n",
+       " {'x': 'qsec', 'y': 'disp', 'value': -0.433697880811014},\n",
+       " {'x': 'qsec', 'y': 'hp', 'value': -0.708223388861953},\n",
+       " {'x': 'qsec', 'y': 'drat', 'value': 0.091204759651183},\n",
+       " {'x': 'qsec', 'y': 'wt', 'value': -0.174715878713405},\n",
+       " {'x': 'qsec', 'y': 'qsec', 'value': 1.0},\n",
+       " {'x': 'qsec', 'y': 'vs', 'value': 0.744535443526254},\n",
+       " {'x': 'qsec', 'y': 'am', 'value': -0.229860862184883},\n",
+       " {'x': 'qsec', 'y': 'gear', 'value': -0.212682229720365},\n",
+       " {'x': 'qsec', 'y': 'carb', 'value': -0.656249228338059},\n",
+       " {'x': 'vs', 'y': 'mpg', 'value': 0.664038919127593},\n",
+       " {'x': 'vs', 'y': 'cyl', 'value': -0.810811796083005},\n",
+       " {'x': 'vs', 'y': 'disp', 'value': -0.7104158907906},\n",
+       " {'x': 'vs', 'y': 'hp', 'value': -0.72309673735245},\n",
+       " {'x': 'vs', 'y': 'drat', 'value': 0.440278464955349},\n",
+       " {'x': 'vs', 'y': 'wt', 'value': -0.554915677663994},\n",
+       " {'x': 'vs', 'y': 'qsec', 'value': 0.744535443526254},\n",
+       " {'x': 'vs', 'y': 'vs', 'value': 1.0},\n",
+       " {'x': 'vs', 'y': 'am', 'value': 0.168345124585359},\n",
+       " {'x': 'vs', 'y': 'gear', 'value': 0.206023348733579},\n",
+       " {'x': 'vs', 'y': 'carb', 'value': -0.569607141006843},\n",
+       " {'x': 'am', 'y': 'mpg', 'value': 0.599832429454648},\n",
+       " {'x': 'am', 'y': 'cyl', 'value': -0.522607046900675},\n",
+       " {'x': 'am', 'y': 'disp', 'value': -0.591227040063948},\n",
+       " {'x': 'am', 'y': 'hp', 'value': -0.243204257185851},\n",
+       " {'x': 'am', 'y': 'drat', 'value': 0.71271112722627},\n",
+       " {'x': 'am', 'y': 'wt', 'value': -0.692495258839484},\n",
+       " {'x': 'am', 'y': 'qsec', 'value': -0.229860862184883},\n",
+       " {'x': 'am', 'y': 'vs', 'value': 0.168345124585359},\n",
+       " {'x': 'am', 'y': 'am', 'value': 1.0},\n",
+       " {'x': 'am', 'y': 'gear', 'value': 0.794058760256343},\n",
+       " {'x': 'am', 'y': 'carb', 'value': 0.0575343510705041},\n",
+       " {'x': 'gear', 'y': 'mpg', 'value': 0.480284757338842},\n",
+       " {'x': 'gear', 'y': 'cyl', 'value': -0.492686599389471},\n",
+       " {'x': 'gear', 'y': 'disp', 'value': -0.555569198562483},\n",
+       " {'x': 'gear', 'y': 'hp', 'value': -0.125704258225474},\n",
+       " {'x': 'gear', 'y': 'drat', 'value': 0.699610131934665},\n",
+       " {'x': 'gear', 'y': 'wt', 'value': -0.583286996536648},\n",
+       " {'x': 'gear', 'y': 'qsec', 'value': -0.212682229720365},\n",
+       " {'x': 'gear', 'y': 'vs', 'value': 0.206023348733579},\n",
+       " {'x': 'gear', 'y': 'am', 'value': 0.794058760256343},\n",
+       " {'x': 'gear', 'y': 'gear', 'value': 1.0},\n",
+       " {'x': 'gear', 'y': 'carb', 'value': 0.274072836357522},\n",
+       " {'x': 'carb', 'y': 'mpg', 'value': -0.550925073902459},\n",
+       " {'x': 'carb', 'y': 'cyl', 'value': 0.526988293749643},\n",
+       " {'x': 'carb', 'y': 'disp', 'value': 0.394976864868969},\n",
+       " {'x': 'carb', 'y': 'hp', 'value': 0.74981247154911},\n",
+       " {'x': 'carb', 'y': 'drat', 'value': -0.0907897988688673},\n",
+       " {'x': 'carb', 'y': 'wt', 'value': 0.427605937735487},\n",
+       " {'x': 'carb', 'y': 'qsec', 'value': -0.656249228338059},\n",
+       " {'x': 'carb', 'y': 'vs', 'value': -0.569607141006843},\n",
+       " {'x': 'carb', 'y': 'am', 'value': 0.0575343510705041},\n",
+       " {'x': 'carb', 'y': 'gear', 'value': 0.274072836357522},\n",
+       " {'x': 'carb', 'y': 'carb', 'value': 1.0}]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
