adding stacked bar chart in notebook.

--- a/notebooks/data_generator_and_db_models.ipynb
+++ b/notebooks/data_generator_and_db_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import names\n",
+    "import string\n",
     "\n",
     "### Ufuncs\n",
     "\n",
@@ -23,8 +24,7 @@
     "        _clamp(random.randint(10, 255)),\n",
     "        _clamp(random.randint(10, 255)),\n",
     "        _clamp(random.randint(10, 255)),\n",
-    "    )\n",
-    "\n"
+    "    )"
    ]
   },
   {
@@ -44,25 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'Antonia West', 'value': 96, 'fill': '#d695db'},\n",
-       " {'label': 'George Williams', 'value': 93, 'fill': '#91671b'},\n",
-       " {'label': 'Maria Browning', 'value': 28, 'fill': '#cfa2d6'},\n",
-       " {'label': 'Rick Glass', 'value': 79, 'fill': '#d162fb'},\n",
-       " {'label': 'Brian Grainger', 'value': 82, 'fill': '#31dc68'},\n",
-       " {'label': 'Carol Gustaveson', 'value': 31, 'fill': '#cafbbe'},\n",
-       " {'label': 'Robert Schwendinger', 'value': 42, 'fill': '#355558'},\n",
-       " {'label': 'Jose Jones', 'value': 16, 'fill': '#a99bee'},\n",
-       " {'label': 'Anthony Cockrell', 'value': 91, 'fill': '#54a5a3'},\n",
-       " {'label': 'Kenneth Jones', 'value': 23, 'fill': '#7e1e13'}]"
+       "[{'label': 'Joseph Moran', 'value': 76, 'fill': '#214fec'},\n",
+       " {'label': 'Gregory Mancini', 'value': 6, 'fill': '#af9093'},\n",
+       " {'label': 'Kurt Hashimoto', 'value': 30, 'fill': '#d6ff15'},\n",
+       " {'label': 'Keneth Manning', 'value': 6, 'fill': '#fae0c8'},\n",
+       " {'label': 'Dorothy Anderson', 'value': 69, 'fill': '#35b2bd'},\n",
+       " {'label': 'Adele Thompson', 'value': 63, 'fill': '#279c48'},\n",
+       " {'label': 'Edith Bucio', 'value': 28, 'fill': '#3a98fa'},\n",
+       " {'label': 'Larry Taylor', 'value': 82, 'fill': '#677ed9'},\n",
+       " {'label': 'Betty Walker', 'value': 36, 'fill': '#a9788b'},\n",
+       " {'label': 'Marla Stafford', 'value': 25, 'fill': '#1564d7'}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,11 +99,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Stacked Bar Chart\n",
+    "\n",
+    "\n",
+    "* __Reference:__ https://www.geeksforgeeks.org/create-a-stacked-bar-chart-using-recharts-in-reactjs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'label': 'Scott Alfaro', 'd': 90.42, 'z': 47.02, 'h': 84.86},\n",
+       "  {'label': 'James Weber', 'd': 70.42, 'z': 29.18, 'h': 97.85},\n",
+       "  {'label': 'Mary Carson', 'd': 76.83, 'z': 9.09, 'h': 17.14},\n",
+       "  {'label': 'Johnny Herman', 'd': 31.47, 'z': 33.05, 'h': 27.51},\n",
+       "  {'label': 'Kerry Goodwin', 'd': 17.16, 'z': 78.58, 'h': 84.95},\n",
+       "  {'label': 'Mark Mertens', 'd': 48.38, 'z': 10.66, 'h': 77.51}],\n",
+       " 'fill': [{'label': 'd', 'fill': '#bd4280'},\n",
+       "  {'label': 'z', 'fill': '#45517b'},\n",
+       "  {'label': 'h', 'fill': '#546b53'}]}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Generate data\n",
+    "n_label = 6\n",
+    "n_var = 3\n",
+    "label = [names.get_full_name() for _ in range(n_label)]\n",
+    "var_collector = []\n",
+    "data_collector = []\n",
+    "cols_collector = []\n",
+    "\n",
+    "while len(set(var_collector))< n_var:\n",
+    "    var_collector.append(random.choice(string.ascii_lowercase))\n",
+    "    data_collector.append(np.random.uniform(1,100,n_label))\n",
+    "    cols_collector.append(col_gen())\n",
+    "\n",
+    "data_df = pd.DataFrame(data_collector, index =var_collector, columns = label).T.reset_index().rename(columns = {\"index\":\"label\"}).round(2)\n",
+    "fill_df = pd.DataFrame({'label': var_collector, 'fill': cols_collector})\n",
+    "\n",
+    "### Save data\n",
+    "\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "data_df.to_sql('stackedchart_data_table', disk_engine, if_exists='append')\n",
+    "fill_df.to_sql('stackedchart_fill_table', disk_engine, if_exists='append')\n",
+    "\n",
+    "### Get data\n",
+    "\n",
+    "data_df = pd.read_sql_query('SELECT * FROM stackedchart_data_table',disk_engine)\n",
+    "data_df = data_df.drop('index',axis= 1)\n",
+    "\n",
+    "fill_df = pd.read_sql_query('SELECT * FROM stackedchart_fill_table', disk_engine)\n",
+    "fill_df = fill_df.drop('index',axis= 1)\n",
+    "\n",
+    "\n",
+    "### Parse data for chart\n",
+    "\n",
+    "response_payload = {\"data\":data_df.to_dict('records'),\"fill\":fill_df.to_dict('records')}\n",
+    "response_payload"
+   ]
   }
  ],
  "metadata": {
