--- a/notebooks/data_generator_and_db_models.ipynb
+++ b/notebooks/data_generator_and_db_models.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from sqlalchemy import create_engine\n",
     "import random\n",
     "import pandas as pd\n",
@@ -24,7 +25,20 @@
     "        _clamp(random.randint(10, 255)),\n",
     "        _clamp(random.randint(10, 255)),\n",
     "        _clamp(random.randint(10, 255)),\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "# Download few sample standard datasets\n",
+    "\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/4_ThreeNum.csv\")\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "df.to_sql('gdp_data', disk_engine, if_exists='append')\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/weather.csv\")\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "df.to_sql('weather_data', disk_engine, if_exists='append')\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/6_SeveralNum.csv\")\n",
+    "df.rename(columns = {\"Unnamed: 0\":\"label\"}, inplace = True)\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "df.to_sql('mtcars_data', disk_engine, if_exists='append')"
    ]
   },
   {
@@ -44,29 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'label': 'Leslie Wright', 'value': 57, 'fill': '#6e2bec'},\n",
-       " {'label': 'Wendy Tucker', 'value': 4, 'fill': '#aafc5c'},\n",
-       " {'label': 'Florence Santos', 'value': 98, 'fill': '#a8facc'},\n",
-       " {'label': 'Salvador Haight', 'value': 77, 'fill': '#3280d0'},\n",
-       " {'label': 'Armand Edmunds', 'value': 87, 'fill': '#b76ec5'},\n",
-       " {'label': 'Thomas Mensalvas', 'value': 85, 'fill': '#a88adf'},\n",
-       " {'label': 'Dolores Lyman', 'value': 50, 'fill': '#271033'},\n",
-       " {'label': 'Von Garcia', 'value': 62, 'fill': '#1d5747'},\n",
-       " {'label': 'Sheila Guidry', 'value': 81, 'fill': '#16b46c'},\n",
-       " {'label': 'Noel Portillo', 'value': 17, 'fill': '#8e6b0b'}]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate data\n",
     "\n",
@@ -110,28 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': [{'label': 'Callie Meyer', 'g': 82.4, 'k': 51.22, 'h': 50.2},\n",
-       "  {'label': 'Jason Finch', 'g': 93.58, 'k': 84.45, 'h': 93.3},\n",
-       "  {'label': 'Anthony Wapp', 'g': 21.85, 'k': 90.22, 'h': 10.74},\n",
-       "  {'label': 'Gary Worden', 'g': 8.14, 'k': 95.1, 'h': 38.31},\n",
-       "  {'label': 'Brian Terrell', 'g': 58.67, 'k': 77.82, 'h': 3.82},\n",
-       "  {'label': 'Robert Robinson', 'g': 2.31, 'k': 84.31, 'h': 12.81}],\n",
-       " 'fill': [{'label': 'g', 'fill': '#79bc91'},\n",
-       "  {'label': 'k', 'fill': '#28cd52'},\n",
-       "  {'label': 'h', 'fill': '#56fbd5'}]}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate data\n",
     "n_label = 6\n",
@@ -181,28 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': [{'label': 'David Cathcart', 'y': 27.4, 'p': 94.8, 'b': 46.82},\n",
-       "  {'label': 'Gertrude Kong', 'y': 84.73, 'p': 55.94, 'b': 50.13},\n",
-       "  {'label': 'Bruce Clark', 'y': 70.89, 'p': 71.53, 'b': 24.08},\n",
-       "  {'label': 'Jessica Moore', 'y': 88.44, 'p': 53.7, 'b': 58.56},\n",
-       "  {'label': 'Joshua Hollingsworth', 'y': 93.72, 'p': 63.2, 'b': 26.53},\n",
-       "  {'label': 'Gwendolyn Saunders', 'y': 96.51, 'p': 41.38, 'b': 28.34}],\n",
-       " 'fill': [{'label': 'y', 'fill': '#eb7d77'},\n",
-       "  {'label': 'p', 'fill': '#c8d926'},\n",
-       "  {'label': 'b', 'fill': '#bede8a'}]}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate data\n",
     "n_label = 6\n",
@@ -252,28 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': [{'label': 'Richard Dorich', 'v': 92.56, 'q': 6.95, 'd': 64.77},\n",
-       "  {'label': 'Donald Brown', 'v': 40.39, 'q': 42.4, 'd': 52.95},\n",
-       "  {'label': 'Victoria Perie', 'v': 21.28, 'q': 73.99, 'd': 24.33},\n",
-       "  {'label': 'Juan Munroe', 'v': 49.39, 'q': 47.37, 'd': 91.53},\n",
-       "  {'label': 'Monica Montejo', 'v': 47.47, 'q': 69.79, 'd': 58.1},\n",
-       "  {'label': 'Jay Harrell', 'v': 65.05, 'q': 5.0, 'd': 51.29}],\n",
-       " 'fill': [{'label': 'v', 'fill': '#580fab'},\n",
-       "  {'label': 'q', 'fill': '#28bb2a'},\n",
-       "  {'label': 'd', 'fill': '#b4d2f2'}]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate data\n",
     "n_label = 6\n",
@@ -323,26 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': [{'i': 57.03, 'v': 63.04},\n",
-       "  {'i': 47.35, 'v': 67.05},\n",
-       "  {'i': 32.9, 'v': 32.77},\n",
-       "  {'i': 4.84, 'v': 56.96},\n",
-       "  {'i': 96.28, 'v': 56.58},\n",
-       "  {'i': 82.59, 'v': 76.8}],\n",
-       " 'fill': {'i': '#ad9936', 'v': '#0a5440'}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate data\n",
     "n_label = 6\n",
@@ -383,18 +303,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Bar Chart\n",
+    "\n",
+    "\n",
+    "* __Reference:__ https://www.geeksforgeeks.org/create-a-bar-chart-using-recharts-in-reactjs/"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Generate data\n",
+    "\n",
+    "label_len = 10\n",
+    "label = [names.get_full_name() for _ in range(label_len)]\n",
+    "value = [random.randint(1, 100) for _ in range(label_len)]\n",
+    "fill = [col_gen() for _ in range(label_len)]\n",
+    "donut_df = pd.DataFrame({'label': label, 'value': value})\n",
+    "label_fill_df = pd.DataFrame({'label': label, 'fill': fill})\n",
+    "\n",
+    "### Save data\n",
+    "\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "donut_df.to_sql('barchart_data_table', disk_engine, if_exists='append')\n",
+    "label_fill_df.to_sql('barchart_fill_table', disk_engine, if_exists='append')\n",
+    "\n",
+    "### Get data\n",
+    "\n",
+    "data_df = pd.read_sql_query('SELECT * FROM barchart_data_table',disk_engine)\n",
+    "data_df = data_df.drop('index',axis= 1)\n",
+    "\n",
+    "fill_df = pd.read_sql_query('SELECT * FROM barchart_fill_table', disk_engine)\n",
+    "fill_df = fill_df.drop('index',axis= 1)\n",
+    "\n",
+    "\n",
+    "### Parse data for chart\n",
+    "\n",
+    "response_payload = ((data_df.set_index('label')).join(fill_df.set_index('label'))).reset_index().to_dict('records')\n",
+    "response_payload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bubble chart\n",
+    "\n",
+    "\n",
+    "* `gdpPercap`: x axis\n",
+    "* `lifeExp`: y axis\n",
+    "* `pop`: size of bubble\n",
+    "* `continent`: colour of bubble\n",
+    "\n",
+    "\n",
+    "* __Reference:__ https://d3-graph-gallery.com/graph/bubble_basic.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Read data from DB\n",
+    "df = pd.read_sql_query('SELECT * FROM gdp_data',disk_engine)\n",
+    "df = df.drop(['index'], axis = 1)\n",
+    "df = df.rename(columns = {\"gdpPercap\":\"x\",\"lifeExp\":\"y\",\"pop\":\"z\",\"country\":'label'})\n",
+    "colour_df = df[['continent']].drop_duplicates()\n",
+    "colour_df['fill'] = [col_gen() for _ in range(len(colour_df))]\n",
+    "disk_engine = create_engine('sqlite:///charts_db.db')\n",
+    "colour_df.to_sql('gdp_data_fill', disk_engine, if_exists='append')\n",
+    "### Parse data for chart\n",
+    "\n",
+    "response_payload = {\"data\":df.to_dict(\"records\"),\"fill\":colour_df.to_dict(\"records\")}\n",
+    "response_payload"
+   ]
   }
  ],
  "metadata": {
